rename conversion helpers

--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -488,11 +488,11 @@
     "from fastcore.test import test_eq\n",
     "\n",
     "from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt\n",
-    "amount = from_token.to_wei(1)\n",
+    "amount = from_token.parse_units(1)\n",
     "\n",
     "quote = await AsyncSuperswap().get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "test_eq(quote.is_bridge, True)\n",
-    "test_eq(quote.amount_out, AsyncLiskChain.o_usdt.to_wei(1))\n",
+    "test_eq(quote.amount_out, AsyncLiskChain.o_usdt.parse_units(1))\n",
     "\n",
     "quote = Superswap().get_super_quote(from_token=from_token, to_token=to_token, amount=amount)\n",
     "test_eq(quote.is_bridge, True)"
