--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -47,7 +47,7 @@
     "# velo -> usdc\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get quote\"):\n",
-    "        quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.to_wei(10))\n",
+    "        quote = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.parse_units(10))\n",
     "\n",
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote, slippage=0.1))\n",
@@ -58,7 +58,7 @@
     "# velo -> eth\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get quote\"):\n",
-    "        quote = await op.get_quote(op.velo, op.eth, op.velo.to_wei(10))\n",
+    "        quote = await op.get_quote(op.velo, op.eth, op.velo.parse_units(10))\n",
     "\n",
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote, slippage=0.1))\n",
@@ -66,7 +66,7 @@
     "# eth -> velo\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get quote\"):\n",
-    "        quote = await op.get_quote(op.eth, op.velo, op.eth.to_wei(0.001))\n",
+    "        quote = await op.get_quote(op.eth, op.velo, op.eth.parse_units(0.001))\n",
     "\n",
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote, slippage=0.1))\n"
@@ -103,7 +103,7 @@
     "    from_token, to_token = AsyncOPChain.velo, AsyncBaseChain.aero \n",
     "    error = None\n",
     "    try:\n",
-    "        tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=MockSuperswapRelayer()).swap(from_token, to_token, amount=from_token.to_wei(20))\n",
+    "        tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=MockSuperswapRelayer()).swap(from_token, to_token, amount=from_token.parse_units(20))\n",
     "    except ValueError as e:\n",
     "        error = e\n",
     "    test_eq(str(error), \"Superswap only supports ['OP', 'Lisk', 'Uni']. Got OP -> Base\")\n",
@@ -112,7 +112,7 @@
     "with OPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.lsk\n",
-    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(10), slippage=0.1)\n",
+    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(10), slippage=0.1)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 1)\n",
     "    last_call = relayer.get_last_call()\n",
@@ -123,7 +123,7 @@
     "async with AsyncOPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.lsk\n",
-    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(10), slippage=0.1)\n",
+    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(10), slippage=0.1)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 1)\n",
     "    last_call = relayer.get_last_call()\n",
@@ -134,7 +134,7 @@
     "async with AsyncOPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.velo, AsyncLiskChain.o_usdt\n",
-    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(10), slippage=0.1)\n",
+    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(10), slippage=0.1)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 0)\n",
     "\n",
@@ -142,7 +142,7 @@
     "with OPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.lsk\n",
-    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(1), slippage=0.1)\n",
+    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(1), slippage=0.1)\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 1)\n",
     "    last_call = relayer.get_last_call()\n",
@@ -153,7 +153,7 @@
     "async with AsyncOPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt\n",
-    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(1))\n",
+    "    tx = await AsyncSuperswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(1))\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 0)\n",
     "\n",
@@ -161,7 +161,7 @@
     "with OPChainSimnet() as op_sim:\n",
     "    relayer=MockSuperswapRelayer()\n",
     "    from_token, to_token = AsyncOPChain.o_usdt, AsyncLiskChain.o_usdt\n",
-    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.to_wei(1))\n",
+    "    tx = Superswap(chain_for_writes=op_sim, relayer=relayer).swap(from_token, to_token, amount=from_token.parse_units(1))\n",
     "    assert(tx.startswith(\"0x\"))\n",
     "    test_eq(relayer.get_call_count(), 0)\n"
    ]
