--- a/src/token.ipynb
+++ b/src/token.ipynb
@@ -65,12 +65,12 @@
     "        t1, t2 = normalize_address(self.wrapped_token_address or self.token_address), normalize_address(other.wrapped_token_address or other.token_address)\n",
     "        return  t1 == t2 and self.chain_id == other.chain_id\n",
     "\n",
-    "    def to_wei(self, value: float) -> int:\n",
-    "        \"\"\"Convert a value to wei based on the token's decimals.\"\"\"\n",
+    "    def parse_units(self, value: float) -> int:\n",
+    "        \"\"\"Convert a value to wei/kwei/gwei/mwei based on the token's decimals.\"\"\"\n",
     "        return float_to_uint256(value=value, decimals=self.decimals)\n",
     "\n",
-    "    def to_decimal(self, value: int) -> float:\n",
-    "        \"\"\"Convert a value from wei to decimal based on the token's decimals.\"\"\"\n",
+    "    def to_float(self, value: int) -> float:\n",
+    "        \"\"\"Convert a value from wei/kwei/gwei/mwei to decimal based on the token's decimals.\"\"\"\n",
     "        return float(value / 10 ** self.decimals)\n",
     "\n",
     "    @property\n",
