--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -1547,15 +1547,15 @@
     "\n",
     "async with AsyncOPChain() as op:\n",
     "    async with atime_it(\"Get async quote\"):\n",
-    "        q1 = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.to_wei(10))\n",
-    "    amount_out1 = op.usdc.to_decimal(q1.amount_out)\n",
+    "        q1 = await op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.parse_units(10))\n",
+    "    amount_out1 = op.usdc.to_float(q1.amount_out)\n",
     "\n",
     "\n",
     "with OPChain() as op:\n",
     "    with time_it(\"Get sync quote\"):\n",
-    "        q2 = op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.to_wei(10))\n",
+    "        q2 = op.get_quote(from_token=op.velo, to_token=op.usdc, amount=op.velo.parse_units(10))\n",
     "    \n",
-    "    amount_out2 = op.usdc.to_decimal(q2.amount_out)\n",
+    "    amount_out2 = op.usdc.to_float(q2.amount_out)\n",
     "\n",
     "test_close(amount_out1, amount_out2, 0.01)"
    ]
