fix method name

--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -88,7 +88,7 @@
     "    @property\n",
     "    def friendly_amount(self) -> str:\n",
     "        \"\"\"Returns the amount in a human-readable format\"\"\"\n",
-    "        return self.token.to_decimal(self.amount)\n",
+    "        return self.token.to_float(self.amount)\n",
     "\n",
     "    @property\n",
     "    def amount_in_stable(self) -> float: return self.friendly_amount * self.price.price\n"
@@ -320,9 +320,11 @@
     "\n",
     "    @property\n",
     "    def total_fees(self) -> float:\n",
+    "        \"\"\"Returns the total fees in USD\"\"\"\n",
     "        return sum([fee.amount_in_stable for fee in self.fees]) if self.fees else 0\n",
     "    @property\n",
     "    def total_incentives(self) -> float:\n",
+    "        \"\"\"Returns the total incentives in USD\"\"\"\n",
     "        return sum([incentive.amount_in_stable for incentive in self.incentives]) if self.incentives else 0\n",
     "\n",
     "    @property\n",
