--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -86,12 +86,12 @@
     "        return Amount(token=token, amount=amount, price=prices[address])\n",
     "\n",
     "    @property\n",
-    "    def friendly_amount(self) -> str:\n",
-    "        \"\"\"Returns the amount in a human-readable format\"\"\"\n",
+    "    def as_float(self) -> float:\n",
+    "        \"\"\"Returns the amount converted from wei/kwei/gwei/mwei to float on the token's decimals.\"\"\"\n",
     "        return self.token.to_float(self.amount)\n",
     "\n",
     "    @property\n",
-    "    def amount_in_stable(self) -> float: return self.friendly_amount * self.price.price\n"
+    "    def amount_in_stable(self) -> float: return self.as_float * self.price.price\n"
    ]
   },
   {
