--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -1579,7 +1579,7 @@
     "#     async with AsyncOPChainSimnet() as supersim:\n",
     "#         print(f\"supersim is {supersim}\")\n",
     "#         # 0.02 USDC \n",
-    "#         await supersim.deposit(Deposit(pools[0], 0.02))"
+    "#         await supersim.deposit(Deposit(pools[0], pools[0].token0.parse_units(0.02)))"
    ]
   },
   {
@@ -1595,14 +1595,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## WIP\n",
+    "# ## WIP\n",
     "# async with OPChain() as op:\n",
     "#     pools = await op.get_pools()\n",
     "#     # find WETH/Velo pool\n",
     "#     weth_velo_pool = next(filter(lambda p: p.token0.token_address == op.settings.wrapped_native_token_addr and p.token1.token_address == OPChain.velo, pools), None)\n",
     "#     test_ne(weth_velo_pool, None)\n",
     "#     async with OPChainSimnet() as supersim:\n",
-    "#         await supersim.deposit(Deposit(weth_velo_pool, 0.0001))"
+    "#         await supersim.deposit(Deposit(weth_velo_pool, weth_velo_pool.token0.parse_units(0.0001)))"
    ]
   },
   {
@@ -1623,7 +1623,7 @@
     "#     pools = list(filter(lambda x: x.token0 and x.token0.token_address == chain.usdc and x.token1.token_address == chain.aero, pools))\n",
     "#     async with AsyncBaseChainSimnet() as supersim:\n",
     "#         # 0.02 USDC \n",
-    "#         await supersim.deposit(Deposit(pools[0], 0.01), slippage=0.05)"
+    "#         await supersim.deposit(Deposit(pools[0], pools[0].token0.parse_units(0.01)), slippage=0.05)"
    ]
   },
   {
@@ -1646,7 +1646,7 @@
     "#     cl_usdc_velo = next(filter(lambda x: x.token0 and x.token0.token_address == chain.usdc and x.token1.token_address == chain.velo and x.is_cl, pools), None)\n",
     "#     test_ne(cl_usdc_velo, None)\n",
     "#     async with OPChainSimnet() as supersim:\n",
-    "#         await supersim.deposit(Deposit(cl_usdc_velo, 0.02))\n"
+    "#         await supersim.deposit(Deposit(cl_usdc_velo, cl_usdc_velo.token0.parse_units(0.02)))\n"
    ]
   },
   {
