Refactor amounts params (#22) re: #21
* refactor amounts params

* rename conversion helpers

* fix method name

* rename friendly_amount to as_float

* add diff + Claude report

* clean up

* clean up, add breaking changes doc

--- a/src/pool.ipynb
+++ b/src/pool.ipynb
@@ -75,18 +75,23 @@
     "@dataclass(frozen=True)\n",
     "class Amount:\n",
     "    token: Token\n",
-    "    amount: float\n",
+    "    amount: int\n",
     "    price: \"Price\"\n",
     "\n",
     "    @classmethod\n",
-    "    def build(cls, address: str, amount: float, tokens: Dict[str, Token], prices: Dict[str, \"Price\"]) -> \"Amount\":\n",
+    "    def build(cls, address: str, amount: int, tokens: Dict[str, Token], prices: Dict[str, \"Price\"]) -> \"Amount\":\n",
     "        address = normalize_address(address)\n",
     "        if address not in tokens or address not in prices: return None\n",
     "        token = tokens[address]\n",
-    "        return Amount(token=token, amount=token.value_from_bigint(amount), price=prices[address])\n",
+    "        return Amount(token=token, amount=amount, price=prices[address])\n",
     "\n",
     "    @property\n",
-    "    def amount_in_stable(self) -> float: return self.amount * self.price.price\n"
+    "    def as_float(self) -> float:\n",
+    "        \"\"\"Returns the amount converted from wei/kwei/gwei/mwei to float on the token's decimals.\"\"\"\n",
+    "        return self.token.to_float(self.amount)\n",
+    "\n",
+    "    @property\n",
+    "    def amount_in_stable(self) -> float: return self.as_float * self.price.price\n"
    ]
   },
   {
@@ -315,9 +320,11 @@
     "\n",
     "    @property\n",
     "    def total_fees(self) -> float:\n",
+    "        \"\"\"Returns the total fees in USD\"\"\"\n",
     "        return sum([fee.amount_in_stable for fee in self.fees]) if self.fees else 0\n",
     "    @property\n",
     "    def total_incentives(self) -> float:\n",
+    "        \"\"\"Returns the total incentives in USD\"\"\"\n",
     "        return sum([incentive.amount_in_stable for incentive in self.incentives]) if self.incentives else 0\n",
     "\n",
     "    @property\n",
