--- a/src/abi.ipynb
+++ b/src/abi.ipynb
@@ -90,7 +90,19 @@
     "            }\n",
     "        ]\n",
     "    }\n",
-    "]        "
+    "]    \n",
+    "\n",
+    "erc20_abi = [\n",
+    "    {\n",
+    "        \"name\": \"approve\",\n",
+    "        \"type\": \"function\",\n",
+    "        \"inputs\": [\n",
+    "            {\"name\": \"spender\", \"type\": \"address\"},\n",
+    "            {\"name\": \"amount\", \"type\": \"uint256\"}\n",
+    "        ],\n",
+    "        \"outputs\": [{\"name\": \"\", \"type\": \"bool\"}]\n",
+    "    }\n",
+    "]"
    ]
   },
   {
