--- a/src/swap.ipynb
+++ b/src/swap.ipynb
@@ -47,7 +47,7 @@
     "from eth_abi import encode\n",
     "from eth_abi.packed import encode_packed\n",
     "from web3 import Web3\n",
-    "from sugar.abi import get_abi\n"
+    "from sugar.abi import get_abi, erc20_abi\n"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "        \"uint256\"\n",
     "    ],\n",
     "    CommandType.TRANSFER_FROM: [\n",
-    "        \"address\",  # sender\n",
+    "        \"address\",  # token\n",
     "        \"address\",  # recipient\n",
     "        \"uint256\"   # amount\n",
     "    ],\n",
@@ -443,37 +443,22 @@
     "        ABI_DEFINITION[CommandType.TRANSFER_FROM],\n",
     "        [i.to_bridge_token.token_address, account, CONTRACT_BALANCE]\n",
     "    )\n",
-    "    subplan_abi = [\"bytes\", \"bytes[]\"]\n",
-    "\n",
     "    destination_inputs = [\n",
-    "        encode(subplan_abi, [swap_subplan_cmds, [destination_transfer_args] + destination_chain_swap_plan.inputs]),\n",
-    "        encode(subplan_abi, [fallback_transfer_cmd, [fallback_transfer_args]]),\n",
+    "        encode(ABI_DEFINITION[CommandType.EXECUTE_SUB_PLAN], [swap_subplan_cmds, [destination_transfer_args] + destination_chain_swap_plan.inputs]),\n",
+    "        encode(ABI_DEFINITION[CommandType.EXECUTE_SUB_PLAN], [fallback_transfer_cmd, [fallback_transfer_args]]),\n",
     "    ] if swap_subplan_cmds else None\n",
     "\n",
-    "    # Encode Sub Plan commands\n",
-    "    destination_cmds = encode_packed(\n",
-    "        [\"bytes\", \"bytes\"],\n",
-    "        [\n",
-    "            bytes([CommandType.EXECUTE_SUB_PLAN | FLAG_ALLOW_REVERT]), \n",
-    "            bytes([CommandType.EXECUTE_SUB_PLAN | FLAG_ALLOW_REVERT])\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    erc20_abi = [\n",
-    "        {\n",
-    "            \"name\": \"approve\",\n",
-    "            \"type\": \"function\",\n",
-    "            \"inputs\": [\n",
-    "                {\"name\": \"spender\", \"type\": \"address\"},\n",
-    "                {\"name\": \"amount\", \"type\": \"uint256\"}\n",
-    "            ],\n",
-    "            \"outputs\": [{\"name\": \"\", \"type\": \"bool\"}]\n",
-    "        }\n",
-    "    ]\n",
-    "    \n",
     "    calls = []\n",
     "\n",
     "    if destination_inputs:\n",
+    "        # Encode Sub Plan commands\n",
+    "        destination_cmds = encode_packed(\n",
+    "            [\"bytes\", \"bytes\"],\n",
+    "            [\n",
+    "                bytes([CommandType.EXECUTE_SUB_PLAN | FLAG_ALLOW_REVERT]), \n",
+    "                bytes([CommandType.EXECUTE_SUB_PLAN | FLAG_ALLOW_REVERT])\n",
+    "            ]\n",
+    "        )\n",
     "        # ICA approves router to withdraw a very high amount\n",
     "        calls.append(ICACallData(\n",
     "            to=to_bytes32_str(i.to_bridge_token.token_address),\n",
