--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -307,7 +307,7 @@
     "                    o_q = from_chain.get_quote(from_token, from_bridge_token, amount=amount)\n",
     "                    if o_q is None: return None\n",
     "\n",
-    "                # we need destination quote if we don't end with oUSDT\n",
+    "                # we need destination quote if we don't end with bridge token\n",
     "                if to_token != to_bridge_token:\n",
     "                    b_a = SuperswapQuote.calc_bridged_amount(from_token, from_bridge_token, amount, o_q)\n",
     "                    d_q = to_chain.get_quote(to_bridge_token, to_token, amount=b_a)\n",
@@ -333,8 +333,9 @@
     "            origin_domain = get_domain(int(from_chain.chain_id))\n",
     "            destination_domain = get_domain(int(to_chain.chain_id))\n",
     "            user_ica_address= from_chain.get_remote_interchain_account(destination_domain)\n",
-    "            bridge_fee = from_chain.get_bridge_fee(int(to_chain.chain_id))\n",
-    "            xchain_fee = from_chain.get_xchain_fee(destination_domain)            \n",
+    "            # TODO: switch to get_bridge_fee without explicit domain ID when all chains support domains\n",
+    "            bridge_fee = from_chain.get_bridge_fee(destination_domain)\n",
+    "            xchain_fee = from_chain.get_xchain_fee(destination_domain) if quote.to_token != quote.to_bridge_token else 0           \n",
     "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
     "\n",
     "            cmds, inputs, swap_data = self.prepare_super_swap(\n",
@@ -440,8 +441,9 @@
     "            origin_domain = await get_domain_async(int(from_chain.chain_id))\n",
     "            destination_domain = await get_domain_async(int(to_chain.chain_id))\n",
     "            user_ica_address = await from_chain.get_remote_interchain_account(destination_domain)\n",
-    "            bridge_fee = await from_chain.get_bridge_fee(int(to_chain.chain_id))\n",
-    "            xchain_fee = await from_chain.get_xchain_fee(destination_domain)            \n",
+    "            # TODO: switch to get_bridge_fee without explicit domain ID when all chains support domains\n",
+    "            bridge_fee = await from_chain.get_bridge_fee(destination_domain)\n",
+    "            xchain_fee = await from_chain.get_xchain_fee(destination_domain) if quote.to_token != quote.to_bridge_token else 0\n",
     "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
     "\n",
     "            cmds, inputs, swap_data = self.prepare_super_swap(\n",
