add comment re unused destination token

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -306,7 +306,7 @@
     "    @require_async_context\n",
     "    async def _internal_bridge_token(self, from_token: Token, destination_token: Token, amount: int, domain: int):\n",
     "        # XX: marking this API as \"internal\" for now\n",
-    "        # TODO: remove destination_domain when get domain API stabilizes\n",
+    "        # TODO: remove destination_domain when get domain API stabilizes and use destination_token instead\n",
     "        c = self.web3.eth.contract(address=self.settings.bridge_contract_addr, abi=bridge_transfer_remote_abi)\n",
     "        await self.set_token_allowance(from_token, self.settings.bridge_contract_addr, amount)\n",
     "        return await self.sign_and_send_tx(c.functions.transferRemote(domain, to_bytes32(self.account.address), amount), value=await self.get_bridge_fee(domain))\n",
@@ -645,7 +645,7 @@
     "    @require_context\n",
     "    def _internal_bridge_token(self, from_token: Token, destination_token: Token, amount: int, domain: int):\n",
     "        # XX: marking this API as \"internal\" for now\n",
-    "        # TODO: remove destination_domain when get domain API stabilizes\n",
+    "        # TODO: remove destination_domain when get domain API stabilizes and use destination_token instead\n",
     "        c = self.web3.eth.contract(address=self.settings.bridge_contract_addr, abi=bridge_transfer_remote_abi)\n",
     "        self.set_token_allowance(from_token, self.settings.bridge_contract_addr, amount)\n",
     "        return self.sign_and_send_tx(c.functions.transferRemote(domain, to_bytes32(self.account.address), amount), value=self.get_bridge_fee(domain))\n",
