integrate new test setup WIP

--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -18,9 +18,35 @@
     "from sugar import AsyncOPChainSimnet, OPChainSimnet, AsyncOPChain, AsyncBaseChain, AsyncLiskChain\n",
     "from sugar.superswap import MockSuperswapRelayer, AsyncSuperswap, Superswap\n",
     "from sugar.helpers import require_supersim, atime_it\n",
+    "from sugar.wallet import get_token_balances\n",
     "from fastcore.test import test_eq\n",
     "\n",
     "require_supersim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c2793a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check balances in simnet to make sure we have enough tokens for testing\n",
+    "\n",
+    "async with AsyncOPChain() as op:\n",
+    "    async with AsyncOPChainSimnet() as simnet:\n",
+    "        tokens = await op.get_all_tokens()\n",
+    "        prices = await op.get_prices(tokens)\n",
+    "        balances = await get_token_balances(simnet, tokens, prices)\n",
+    "        eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
+    "        assert eth is not None, \"ETH balance not found\"\n",
+    "        test_eq(eth.balance, 10000.0)\n",
+    "\n",
+    "        # [\n",
+    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='ETH', symbol='ETH', decimals=18, listed=True, wrapped_token_address=None), balance=10000.0, price_stable=3760.4190735113975), \n",
+    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), balance=1000.0, price_stable=0.061527870074979334), \n",
+    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), balance=1000.0, price_stable=0.9976481734652878)\n",
+    "        # ]\n"
    ]
   },
   {
