--- a/src/wallet.ipynb
+++ b/src/wallet.ipynb
@@ -41,6 +41,7 @@
     "#| export\n",
     "\n",
     "import asyncio\n",
+    "from typing import List, Optional\n",
     "from dataclasses import dataclass\n",
     "from sugar import AsyncChain\n",
     "from sugar.token import Token\n",
@@ -120,7 +121,7 @@
     "    return valid_results\n",
     "\n",
     "# Monkey patch AsyncChain to add get_token_balances method\n",
-    "async def get_token_balances(self: AsyncChain, address=None):\n",
+    "async def get_token_balances(self: AsyncChain, tokens: Optional[List[Token]] = None, prices: Optional[List[Price]] = None,  address=None):\n",
     "    \"\"\"Get all token balances for a given address using batched requests\n",
     "    \n",
     "    This method uses asyncio.gather to make concurrent RPC calls in batches,\n",
@@ -137,8 +138,8 @@
     "    if address is None:\n",
     "        address = self.account.address\n",
     "    \n",
-    "    balances, tokens = [], await self.get_all_tokens()\n",
-    "    prices = await self.get_prices(tokens)\n",
+    "    balances, tokens = [],  tokens or await self.get_all_tokens()\n",
+    "    prices = prices or await self.get_prices(tokens)\n",
     "    seen_addresses, erc20_tokens = set(), []\n",
     "    \n",
     "    # Build price lookup dictionary\n",
@@ -179,18 +180,14 @@
     "    for i in range(0, len(erc20_tokens), batch_size):\n",
     "        batch = erc20_tokens[i:i + batch_size]\n",
     "        # Process batch using batch_requests\n",
-    "        batch_results = await self.process_token_batch(batch, address, price_lookup)\n",
+    "        batch_results = await process_token_batch(self, batch, address, price_lookup)\n",
     "        \n",
     "        # Add non-zero balances to results\n",
     "        for result in batch_results:\n",
     "            if result and result.balance > 0:\n",
     "                balances.append(result)\n",
     "    \n",
-    "    return balances\n",
-    "\n",
-    "# Add the methods to AsyncChain\n",
-    "AsyncChain.process_token_batch = process_token_batch\n",
-    "AsyncChain.get_token_balances = get_token_balances"
+    "    return balances"
    ]
   },
   {
