clean up wallet loading

--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -42,11 +42,13 @@
     "        assert eth is not None, \"ETH balance not found\"\n",
     "        test_eq(eth.balance, 10000.0)\n",
     "\n",
-    "        # [\n",
-    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='ETH', symbol='ETH', decimals=18, listed=True, wrapped_token_address=None), balance=10000.0, price_stable=3760.4190735113975), \n",
-    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='0x9560e827aF36c94D2Ac33a39bCE1Fe78631088Db', symbol='VELO', decimals=18, listed=True, wrapped_token_address=None), balance=1000.0, price_stable=0.061527870074979334), \n",
-    "        #     TokenBalance(token=Token(chain_id='10', chain_name='OP', token_address='0x0b2C639c533813f4Aa9D7837CAf62653d097Ff85', symbol='USDC', decimals=6, listed=True, wrapped_token_address=None), balance=1000.0, price_stable=0.9976481734652878)\n",
-    "        # ]\n"
+    "        velo = next((b for b in balances if b.token.symbol == 'VELO'), None)\n",
+    "        assert velo is not None, \"VELO balance not found\"\n",
+    "        test_eq(velo.balance, 1000.0)\n",
+    "\n",
+    "        usdc = next((b for b in balances if b.token.symbol == 'USDC'), None)\n",
+    "        assert usdc is not None, \"USDC balance not found\"\n",
+    "        test_eq(usdc.balance, 1000.0)"
    ]
   },
   {
