--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -1001,16 +1001,8 @@
     "Simnet URIs:\n",
     "\n",
     "- OP: http://127.0.0.1:4444\n",
-    "- Base: http://127.0.0.1:4445\n",
-    "- Lisk: http://127.0.0.1:4446\n",
-    "\n",
-    "This assumes the following setup:\n",
-    "\n",
-    "```\n",
-    "supersim fork  --l2.host=0.0.0.0 --l2.starting.port=4444 --chains=op,base,lisk\n",
-    "```\n",
-    "\n",
-    "For local dev, use:\n",
+    "- Lisk: http://127.0.0.1:4445\n",
+    "- Base: http://127.0.0.1:4446\n",
     "\n",
     "```\n",
     "python ./supersim.py\n",
@@ -1021,27 +1013,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AsyncOPChain' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#| export\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mAsyncOPChainSimnet\u001b[39;00m(\u001b[43mAsyncOPChain\u001b[49m):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,  **kwargs): \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(rpc_uri=\u001b[33m\"\u001b[39m\u001b[33mhttp://127.0.0.1:4444\u001b[39m\u001b[33m\"\u001b[39m, **kwargs)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mOPChainSimnet\u001b[39;00m(OPChain):\n",
+      "\u001b[31mNameError\u001b[39m: name 'AsyncOPChain' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "\n",
     "class AsyncOPChainSimnet(AsyncOPChain):\n",
     "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4444\", **kwargs)\n",
     "\n",
-    "class AsyncBaseChainSimnet(AsyncBaseChain):\n",
-    "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4445\", **kwargs)\n",
-    "\n",
     "class OPChainSimnet(OPChain):\n",
     "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4444\", **kwargs)\n",
     "\n",
-    "class BaseChainSimnet(BaseChain):\n",
+    "class LiskChainSimnet(LiskChain):\n",
     "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4445\", **kwargs)\n",
     "\n",
-    "class LiskChainSimnet(LiskChain):\n",
+    "class AsyncLiskChainSimnet(AsyncLiskChain):\n",
+    "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4445\", **kwargs)\n",
+    "\n",
+    "class AsyncBaseChainSimnet(AsyncBaseChain):\n",
     "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4446\", **kwargs)\n",
     "\n",
-    "class AsyncLiskChainSimnet(AsyncLiskChain):\n",
-    "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4445\", **kwargs)"
+    "class BaseChainSimnet(BaseChain):\n",
+    "    def __init__(self,  **kwargs): super().__init__(rpc_uri=\"http://127.0.0.1:4446\", **kwargs)"
    ]
   },
   {
