--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sugar import AsyncOPChainSimnet, OPChainSimnet, AsyncOPChain, AsyncBaseChain, AsyncLiskChain\n",
+    "from sugar import AsyncOPChainSimnet, OPChainSimnet, AsyncOPChain, AsyncBaseChain, AsyncLiskChain, AsyncLiskChainSimnet\n",
     "from sugar.superswap import MockSuperswapRelayer, AsyncSuperswap, Superswap\n",
     "from sugar.helpers import require_supersim, atime_it\n",
     "from sugar.wallet import get_token_balances\n",
@@ -33,22 +33,34 @@
    "source": [
     "# check balances in simnet to make sure we have enough tokens for testing\n",
     "\n",
-    "async with AsyncOPChain() as op:\n",
-    "    async with AsyncOPChainSimnet() as simnet:\n",
-    "        tokens = await op.get_all_tokens()\n",
-    "        prices = await op.get_prices(tokens)\n",
+    "# async with AsyncOPChain() as op:\n",
+    "#     async with AsyncOPChainSimnet() as simnet:\n",
+    "#         tokens = await op.get_all_tokens()\n",
+    "#         prices = await op.get_prices(tokens)\n",
+    "#         balances = await get_token_balances(simnet, tokens, prices)\n",
+    "#         eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
+    "#         assert eth is not None, \"ETH balance not found\"\n",
+    "#         test_eq(eth.balance, 10000.0)\n",
+    "\n",
+    "#         velo = next((b for b in balances if b.token.symbol == 'VELO'), None)\n",
+    "#         assert velo is not None, \"VELO balance not found\"\n",
+    "#         test_eq(velo.balance, 1000.0)\n",
+    "\n",
+    "#         usdc = next((b for b in balances if b.token.symbol == 'USDC'), None)\n",
+    "#         assert usdc is not None, \"USDC balance not found\"\n",
+    "#         test_eq(usdc.balance, 1000.0)\n",
+    "\n",
+    "async with AsyncLiskChain() as lisk:\n",
+    "    async with AsyncLiskChainSimnet() as simnet:\n",
+    "        tokens = await lisk.get_all_tokens()\n",
+    "        prices = await lisk.get_prices(tokens)\n",
     "        balances = await get_token_balances(simnet, tokens, prices)\n",
     "        eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
     "        assert eth is not None, \"ETH balance not found\"\n",
     "        test_eq(eth.balance, 10000.0)\n",
-    "\n",
-    "        velo = next((b for b in balances if b.token.symbol == 'VELO'), None)\n",
-    "        assert velo is not None, \"VELO balance not found\"\n",
-    "        test_eq(velo.balance, 1000.0)\n",
-    "\n",
-    "        usdc = next((b for b in balances if b.token.symbol == 'USDC'), None)\n",
-    "        assert usdc is not None, \"USDC balance not found\"\n",
-    "        test_eq(usdc.balance, 1000.0)"
+    "        # lsk = next((b for b in balances if b.token.symbol == 'LSK'), None)\n",
+    "        # assert lsk is not None, \"LSK balance not found\"\n",
+    "        # test_eq(lsk.balance, 1000.0)"
    ]
   },
   {
