drop balance tests

--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -31,51 +31,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check balances in simnet to make sure we have enough tokens for testing\n",
+    "# # check balances in simnet to make sure we have enough tokens for testing\n",
     "\n",
-    "async with AsyncOPChain() as op:\n",
-    "    async with AsyncOPChainSimnet() as simnet:\n",
-    "        tokens = await op.get_all_tokens()\n",
-    "        prices = await op.get_prices(tokens)\n",
+    "# async with AsyncOPChain() as op:\n",
+    "#     async with AsyncOPChainSimnet() as simnet:\n",
+    "#         tokens = await op.get_all_tokens()\n",
+    "#         prices = await op.get_prices(tokens)\n",
     "\n",
-    "        balances = await get_token_balances(simnet, tokens, prices)\n",
+    "#         balances = await get_token_balances(simnet, tokens, prices)\n",
     "        \n",
-    "        o_usdt = next((b for b in balances if b.token.symbol == 'oUSDT'), None)\n",
-    "        assert o_usdt is not None, \"oUSDT balance not found\"\n",
-    "        assert o_usdt.balance >= 100, f\"Expected oUSDT balance > 100, got {o_usdt.balance}\"\n",
+    "#         o_usdt = next((b for b in balances if b.token.symbol == 'oUSDT'), None)\n",
+    "#         assert o_usdt is not None, \"oUSDT balance not found\"\n",
+    "#         assert o_usdt.balance >= 100, f\"Expected oUSDT balance > 100, got {o_usdt.balance}\"\n",
     "\n",
-    "        eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
-    "        assert eth is not None, \"ETH balance not found\"\n",
-    "        assert eth.balance > 1000.0, f\"Expected ETH balance > 1000.0, got {eth.balance}\"\n",
+    "#         eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
+    "#         assert eth is not None, \"ETH balance not found\"\n",
+    "#         assert eth.balance > 1000.0, f\"Expected ETH balance > 1000.0, got {eth.balance}\"\n",
     "\n",
-    "        velo = next((b for b in balances if b.token.symbol == 'VELO'), None)\n",
-    "        assert velo is not None, \"VELO balance not found\"\n",
-    "        test_eq(velo.balance, 1000.0)\n",
+    "#         velo = next((b for b in balances if b.token.symbol == 'VELO'), None)\n",
+    "#         assert velo is not None, \"VELO balance not found\"\n",
+    "#         test_eq(velo.balance, 1000.0)\n",
     "\n",
-    "        usdc = next((b for b in balances if b.token.symbol == 'USDC'), None)\n",
-    "        assert usdc is not None, \"USDC balance not found\"\n",
-    "        test_eq(usdc.balance, 1000.0)\n",
+    "#         usdc = next((b for b in balances if b.token.symbol == 'USDC'), None)\n",
+    "#         assert usdc is not None, \"USDC balance not found\"\n",
+    "#         test_eq(usdc.balance, 1000.0)\n",
     "\n",
-    "async with AsyncLiskChain() as lisk:\n",
-    "    async with AsyncLiskChainSimnet() as simnet:\n",
-    "        tokens = await lisk.get_all_tokens()\n",
-    "        prices = await lisk.get_prices(tokens)\n",
-    "        balances = await get_token_balances(simnet, tokens, prices)\n",
+    "# async with AsyncLiskChain() as lisk:\n",
+    "#     async with AsyncLiskChainSimnet() as simnet:\n",
+    "#         tokens = await lisk.get_all_tokens()\n",
+    "#         prices = await lisk.get_prices(tokens)\n",
+    "#         balances = await get_token_balances(simnet, tokens, prices)\n",
     "\n",
-    "        eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
+    "#         eth = next((b for b in balances if b.token.symbol == 'ETH'), None)\n",
     "        \n",
-    "        assert eth is not None, \"ETH balance not found\"\n",
-    "        assert eth.balance > 1000\n",
+    "#         assert eth is not None, \"ETH balance not found\"\n",
+    "#         assert eth.balance > 1000\n",
     "\n",
-    "        balances = await get_token_balances(simnet, tokens, prices)\n",
+    "#         lsk = next((b for b in balances if b.token.symbol == 'LSK'), None)\n",
+    "#         assert lsk is not None, \"LSK balance not found\"\n",
+    "#         assert lsk.balance >= 1000, f\"Expected LSK balance > 1000, got {lsk.balance}\"\n",
     "\n",
-    "        lsk = next((b for b in balances if b.token.symbol == 'LSK'), None)\n",
-    "        assert lsk is not None, \"LSK balance not found\"\n",
-    "        assert lsk.balance >= 1000, f\"Expected LSK balance > 1000, got {lsk.balance}\"\n",
-    "\n",
-    "        o_usdt = next((b for b in balances if b.token.symbol == 'oUSDT'), None)\n",
-    "        assert o_usdt is not None, \"oUSDT balance not found\"\n",
-    "        assert o_usdt.balance >= 100, f\"Expected oUSDT balance > 100, got {o_usdt.balance}\""
+    "#         o_usdt = next((b for b in balances if b.token.symbol == 'oUSDT'), None)\n",
+    "#         assert o_usdt is not None, \"oUSDT balance not found\"\n",
+    "#         assert o_usdt.balance >= 100, f\"Expected oUSDT balance > 100, got {o_usdt.balance}\""
    ]
   },
   {
